Fix overflowing box

--- a/site/content/pages/index.module.scss
+++ b/site/content/pages/index.module.scss
@@ -16,6 +16,10 @@
                 width: 512px;
             }
         }
+
+        .hook {
+            max-width: 100%;
+        }
     }
 }
 
